--- a/InvestmentTracker/Pages/Investments/Create.cshtml
+++ b/InvestmentTracker/Pages/Investments/Create.cshtml
@@ -23,6 +23,11 @@
     </div>
 
     <div class="mb-3">
+        <label asp-for="Investment.Category" class="form-label"></label>
+        <select asp-for="Investment.Category" class="form-select" asp-items="Html.GetEnumSelectList<InvestmentCategory>()"></select>
+    </div>
+
+    <div class="mb-3">
         <label asp-for="Investment.Currency" class="form-label"></label>
         <select asp-for="Investment.Currency" class="form-select" asp-items="Html.GetEnumSelectList<Currency>()"></select>
     </div>
