initial expense tracker page init

--- a/InvestmentTracker/Pages/Index.cshtml
+++ b/InvestmentTracker/Pages/Index.cshtml
@@ -23,8 +23,8 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Expense Tracking</h5>
-                <p class="card-text">Track your expenses (coming soon).</p>
-                <a href="#" class="btn btn-secondary disabled">Go to Expenses</a>
+                <p class="card-text">Track your monthly incomes and expenses.</p>
+                <a asp-page="/Expenses/Index" class="btn btn-primary">Go to Expenses</a>
             </div>
         </div>
     </div>
